# mono-soc-2008

./: ProjectHome.md
CssAddin/: CssAddin.mdp  CssAddin.mds
CssAddin/CssAddin/: CssLanguageBinding.cs
CssAddin/Parser/: CssAddinParser.cs  CssCompilationUnit.cs
CssAddin/Templates/: CssFile-Empty.xpt.xml
Dlinq/: Build Northwind parameters.txt  readme.txt
Dlinq/DbLinq/: DbLinq.csproj
Dlinq/DbLinq.Ingres/: DbLinq.Ingres.csproj
Dlinq/DbLinq.SqlServer/: SqlServerVendor.cs
Dlinq/DbMetal/: DB to DBML.txt
Dlinq/Working Sample/: Test.cs  build.sh  originalMSNorthwind.designer.cs
cloverleaf/: Cloverleaf.sln
cloverleaf/CloverleafET/: CloverleafET.csproj  Program.cs
cloverleaf/CloverleafService/: AppService.Designer.cs  CloverleafService.csproj  Program.cs
cloverleaf/CloverleafShared/: BaseAppTester.cs  BaseTester.cs  BaseWebTester.cs  CloverleafEnvironment.cs  CloverleafShared.csproj  MonoTester.cs  ProjectInfo.cs  frmMonoTestRunning.Designer.cs  frmMonoTestRunning.cs  frmMonoTestSelector.Designer.cs  (+1 more)
gendarme/: MIT.X11  Makefile.am  README  configure.ac
gendarme/reporter/: AddXSLProcessingInstructionAction.cs  DefaultPipeline.cs  Driver.cs  FilterBySeverityAction.cs  GenerateDefectsPerAssemblyAction.cs  GenerateMasterIndexAction.cs  IAction.cs  Makefile.am  MasterReportPipeline.cs  Pipeline.cs  ValidateInputXmlAction.cs  WriteToFileAction.cs  gendarme-output.xsd
gendarme/reporter/Test/: AddXSLProcessingInstructionActionTest.cs  FilterBySeverityActionTest.cs  GenerateDefectsPerAssemblyActionTest.cs  GenerateDefectsPerAssemblyAndSeverityActionTest.cs  GenerateMasterIndexActionTest.cs  ValidateInputXmlActionTest.cs  WriteToFileActionTest.cs
gendarme/reporter/Test/Fakes/: 06-18-2008-bad.xml  Mono.Security.xml
gendarme/rules/Gendarme.Rules.Exceptions/: InstantiateArgumentExceptionCorrectlyRule.cs  Makefile.am
gendarme/rules/Gendarme.Rules.Exceptions/Test/: InstantiateArgumentExceptionCorrectlyTest.cs
gendarme/rules/Gendarme.Rules.Performance/: ConsiderInliningLocalsUsedOnceRule.cs  Makefile.am
gendarme/rules/Gendarme.Rules.Performance/Test/: ConsiderInliningLocalsUsedOnceTest.cs
gendarme/rules/Gendarme.Rules.Serialization/: CallBaseMethodsOnISerializableTypesRule.cs  ImplementISerializableCorrectlyRule.cs  Makefile.am  MarkAllNonSerializableFieldsRule.cs
gendarme/rules/Gendarme.Rules.Serialization/Test/: CallBaseMethodsOnISerializableTypesTest.cs  ImplementISerializableCorrectlyTest.cs  MarkAllNonSerializableFieldsTest.cs
gendarme/test/applyTo/: ApplyTo.cs  ApplyToAll.cs  ApplyToMixed.cs  ApplyToNonVisible.cs  ApplyToTest.cs  ApplyToVisible.cs  FakeAssembly.cs  FakeRules.cs  Makefile.am
gendarme/test/applyTo/configurations/: rules-all.xml  rules-mixed.xml  rules-visible.xml
parallelfx/: .gitignore  ParallelFX.mds
trunk/gendarme/: Makefile.am  README  configure.ac
trunk/gendarme/patches/: applyTo_implementation.patch  bugs-reported.txt  equivalence.txt  xsd_applyTo.patch
trunk/gendarme/patches/notApplied/: sys_security_access_control_argument.patch  sys_security_permission_argument.patch  sys_security_policy_argument.patch  sys_security_principal_argument.patch
trunk/gendarme/profiles/: rules-net_2_0.xml  run-net_2_0
trunk/gendarme/reporter/: AddXSLProcessingInstructionAction.cs  Driver.cs  FilterBySeverityAction.cs  GenerateDefectsPerAssemblyAction.cs  GenerateDefectsPerAssemblyAndSeverityAction.cs  GenerateMasterIndexAction.cs  IAction.cs  IPipeline.cs  Makefile.am  MasterPageResultWriter.cs  MasterReportPipeline.cs  Pipeline.cs  ReporterLauncher.cs  ValidateInputXmlAction.cs  WriteToFileAction.cs  gendarme-output.xsd  master.xsl
trunk/gendarme/reporter/Test/: AddXSLProcessingInstructionActionTest.cs  FilterBySeverityActionTest.cs  GenerateDefectsPerAssemblyActionTest.cs  GenerateMasterIndexActionTest.cs  PipelineTest.cs  ValidateInputXmlActionTest.cs  WriteToFileActionTest.cs
trunk/gendarme/reporter/Test/Fakes/: 06-18-2008-bad.xml  06-18-2008-small.xml  06-18-2008.xml  Mono.Security.xml
trunk/gendarme/rules/: Makefile.am
trunk/gendarme/rules/Gendarme.Rules.BadPractice/: AvoidCallingProblematicMethodsRule.cs  Makefile.am
trunk/gendarme/rules/Gendarme.Rules.Correctness/: AttributeStringLiteralsShouldParseCorrectlyRule.cs  Makefile.am  ProvideCorrectArgumentsToFormattingMethodsRule.cs
trunk/gendarme/rules/Gendarme.Rules.Correctness/Test/: AttributeStringLiteralsShouldParseCorrectlyTest.cs  BadAssemblyAttributeStringLiteralsShouldParseCorrectlyTest.cs  GoodAssemblyAttributeStringLiteralsShouldParseCorrectlyTest.cs  ProvideCorrectArgumentsToFormattingMethodsTest.cs
trunk/gendarme/rules/Gendarme.Rules.Design/: DeclareEventHandlersCorrectlyRule.cs  Makefile.am
trunk/gendarme/rules/Gendarme.Rules.Design/Test/: DeclareEventHandlersCorrectlyTest.cs
trunk/gendarme/rules/Gendarme.Rules.Exceptions/: InstantiateArgumentExceptionCorrectlyRule.cs
trunk/gendarme/rules/Gendarme.Rules.Exceptions/Test/: InstantiateArgumentExceptionCorrectlyTest.cs
trunk/gendarme/rules/Gendarme.Rules.Performance/: ConsiderInliningLocalsUsedOnceRule.cs
trunk/gendarme/rules/Gendarme.Rules.Performance/Test/: ConsiderInliningLocalsUsedOnceTest.cs
trunk/gendarme/rules/Gendarme.Rules.Reliability/: AvoidCallingProblematicMethodsRule.cs  Makefile.am
trunk/gendarme/rules/Gendarme.Rules.Reliability/Test/: AvoidCallingProblematicMethodsTest.cs
trunk/gendarme/rules/Gendarme.Rules.Serialization/: CallBaseMethodsOnISerializableTypesRule.cs  ImplementISerializableCorrectlyRule.cs  Makefile.am  MarkAllNonSerializableFieldsRule.cs
trunk/gendarme/rules/Gendarme.Rules.Serialization/Test/: CallBaseMethodsOnISerializableTypesTest.cs  ImplementISerializableCorrectlyTest.cs  MarkAllNonSerializableFieldsTest.cs
trunk/gendarme/test/: Makefile.am  Makefile.in
trunk/gendarme/test/applyTo/: ApplyTo.cs  ApplyToAll.cs  ApplyToDefault.cs  ApplyToMixed.cs  ApplyToNonVisible.cs  ApplyToVisible.cs  FakeAssembly.cs  FakeRules.cs  Makefile.am  TestHelpers.cs  TestableRunner.cs
trunk/gendarme/test/applyTo/configurations/: rules-default.xml  rules-nonvisible.xml
(+490 files in other folders)
